--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main class="home-main">
     <div class="intro-container">
-      <img src="images/estiak-472x560.webp" alt="Estiak Ahmed">
+      <img src="images/estiak-472x560.jpg" alt="Estiak Ahmed">
       <h1>Estiak Ahmed</h1>
       <h2>Graduate Teaching Assistant</h2>
       <p>A Graduate Teaching Assistant and Master’s student in Architectural Engineering at the University of Wyoming. He specializes in drone technology applications to enhance architectural design and construction processes.</p>
