Updating my photo

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
   <main class="about-main">
     <div class="about-container">
-      <img src="images/estiak-472x560.webp" alt="Estiak Ahmed">
+      <img src="images/estiak-472x560.jpg" alt="Estiak Ahmed">
       <div class="about-text">
         <h1>About Estiak Ahmed</h1>
         <p>Estiak Ahmed is a passionate Graduate Teaching Assistant and Master’s candidate in Architectural Engineering at the University of Wyoming. He holds a Bachelor of Engineering degree in Building Engineering and Construction Management from Khulna University of Engineering and Technology. His academic background is complemented by strong skills in building materials, construction management, AutoCAD, project management, and quality assurance.</p>
